--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Merriweather', serif;
+  background-color: #f5f5f5;
+  color: #333;
+  line-height: 1.8;
+  padding: 20px;
 }
+
+main {
+  max-width: 800px;
+  margin: auto;
+  background: white;
+  padding: 30px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 3px solid #000;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 15px;
+  font-size: 1.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: #b71c1c;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+p {
+  text-align: justify;
+  font-size: 1.1rem;
+  margin-top: 10px;
+}
+
+button {
+  background-color: #b71c1c;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 15px;
+}
+
+button:hover {
+  background-color: #8c0000;
+}
+
+
